Add My Feed page, Massive.com API integration, and database policies
Features added:
- My Feed page with user profile, activity metrics, and post creation
- Creator performance metrics display (P&L, Sharpe Ratio, etc.)
- Massive.com (Polygon.io) API integration for live stock prices
- Ticker search functionality with live suggestions
- Logo navigation to Discover page
- Database seeding scripts for tickers and user metrics
- Comprehensive RLS policies for My Feed functionality
- API functions for user posts, comments, and performance metrics
- Complete documentation and setup guides

--- a/package.json
+++ b/package.json
@@ -52,10 +52,15 @@
             "@types/react": "^19.2.6",
             "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "dotenv": "^17.2.3",
+            "tsx": "^4.20.6",
+            "typescript": "^5.9.3",
             "vite": "6.3.5"
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "seed:tickers": "tsx scripts/seed-tickers.ts",
+            "seed:metrics": "tsx scripts/seed-user-metrics.ts"
       }
 }
