--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "@supabase/supabase-js": "^2.84.0",
+            "@types/draft-js": "^0.11.20",
+            "@types/draftjs-to-html": "^0.8.4",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
+            "draft-js": "^0.11.7",
+            "draftjs-to-html": "^0.9.1",
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
@@ -40,6 +44,7 @@
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
+            "react-draft-wysiwyg": "^1.15.0",
             "react-hook-form": "^7.55.0",
             "react-resizable-panels": "^2.1.7",
             "recharts": "^2.15.2",
